--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.6",
     "typescript": "^5.2.2",
-    "vite": "^5.3.4"
+    "vite": "^5.3.4",
+    "vite-plugin-glsl": "^1.3.0"
   }
 }
