--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,10 @@
     {
       "path": "./tsconfig.node.json"
     }
-  ]
+  ],
+  "compilerOptions": {
+    "types": [
+      "vite-plugin-glsl/ext"
+    ]
+  }
 }
